--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy-gh": "gh-pages -d example/build",
+    "deploy": "npx chromatic --project-token=chpt_ae3e29a21dce270 --force-rebuild",
+    "chromatic": "npx chromatic --project-token=chpt_ae3e29a21dce270 --force-rebuild"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -44,7 +46,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.1.4",
     "@types/node": "^12.12.38",
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.3.28",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
